--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "angular-datepicker": "^1.0.5",
+    "angular-in-memory-web-api": "^0.2.1",
+    "angular2-datatable": "^0.5.2",
     "core-js": "^2.4.1",
+    "mydatepicker": "^1.0.36",
+    "ng2-datepicker": "^1.4.6",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
